@@ -1,5 +1,9 @@
 2003-04-24  Martin Blom  <martin@blom.org>
 
+	* ahi.device: The workaround for the m68k compiler bug introduced
+	in ahi.device 5.25 assumed a big endian CPU. Now, the workaround
+	is only applied when compiling for the m68k.
+
 	* filesave.audio: Now endian aware. Avoided varargs in order to
 	make it compile for AROS.
 
